17/02/2022
-Removed workbox, since I am not really using it and the build does not like it