@@ -123,7 +123,6 @@ export default {
             scope: "/",
           }
         );
-
         const subscription = await register.pushManager.subscribe({
           userVisibleOnly: true,
           applicationServerKey: urlBase64ToUint8Array(publicVapidKey),
